--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About Software</title>
+        <title>Software Wikipedia</title>
         <link rel="stylesheet" href="./styles/index.css">
         <link rel="stylesheet" href="<link href="<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>
-            Software Engineering
+            About Software Engineering 
         </h1>
 
         <p>
